# openeagle

./: .env.example  .gitignore  API.md  DELIVERY.md  DEVELOPMENT_PREP.md  DEVELOPMENT_PROGRESS.md  Dockerfile  FEATURES.md  FRONTEND_TEST_REPORT.txt  Makefile  OPENAG_STATUS_REPORT.md  OPENAG_STRUCTURE.md  OPTIMIZATION.md  PLAN.md  PRD.md  PROJECT_STRUCTURE.md  PROTOCOL.md  README.md  ROADMAP.md  TASKS.md  TASK_MVP.md  TDD.md  TEAM.md  UI检测方案.md  V1.0.md  V2.0.md  V3.0.md  V3.0_PHASE2.md  VisionClaw_Complete_Doc.md  docker-compose.yml  download_models.py  integration_test.sh  main.py  patent_ai_wearable.docx.txt  patent_ai_wearable.rtf  pytest.ini  requirements-full.txt  requirements.txt  setup.py  setup.sh  (+4 more)
api/: audio.py
app/: __init__.py  main.py
app/api/: __init__.py  advanced_ai.py  (+1 more)
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py  agents.py  audio.py  chat.py  health.py  sessions.py  vision.py
backend/app/core/: __init__.py  config.py  database.py  redis.py
backend/app/models/: __init__.py  agent.py  session.py
backend/app/schemas/: __init__.py  agent.py  session.py
core/: __init__.py  cache.py  config.py  metrics.py  middleware.py
examples/: causal_example.py  multimodal_example.py
flutter_app/: CHECKLIST.md  PROGRESS.md  README.md  pubspec.yaml
models/: schemas.py
services/: stt_service.py  tts_service.py
tests/: conftest.py  test_analyze.py  test_causal_inference.py  test_detect.py  test_health.py  test_multimodal_fusion.py  test_ocr.py
utils/: audio_converter.py  helpers.py
(+60 files in other folders)
